# instaui-tdesign

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: main-playwright-cache.yml  ruff-check.yml  tdesign-ci.yml
__tests/testing_web/: conftest.py  server.py  test_affix.py  test_anchor.py  test_collapse.py  test_input.py  test_locale.py  test_message.py  test_notification.py  test_radio_group.py  test_select.py  test_table.py  test_tabs.py  test_upload.py
__tests/testing_zero/: conftest.py  context.py  test_locale.py  test_theme.py
__tests/utils/: anchor_utils.py  input_utils.py  message_utils.py  notification_utils.py  pagination_utils.py  radio_group_utils.py  select_utils.py  style_testing_utils.py  switch_utils.py  table_utils.py
npm-src/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.tdesign.ts  vite.config.ts
npm-src/scripts/: builder.py
npm-src/src/: main-tdesign.ts  main.ts
npm-src/src/components/: Affix.vue  Anchor.vue  Icon.vue  RadioGroup.vue  Select.vue  Table.vue  affix.ts  anchor.ts  table.ts
npm-src/src/style/: default-theme.css  index.css  table.css
npm-src/src/systems/: function-systems.ts
npm-src/tdesign-es/: index.ts
npm-src/tdesign-es/types/: tdesign-vue-next.d.ts
npm-src/types/: instaui.d.ts
scripts/component_gen/: README.md  main_events.py  main_parsed.py  main_types.py  utils.py
snippets/select/: lang_select.py
snippets/table/: columns_define.py
src/instaui_tdesign/: __init__.py  _settings.py  consts.py  setup.py  types.py  version.py
src/instaui_tdesign/_use_tools/: locale.py
src/instaui_tdesign/cdn/: __init__.py  _cdn.py
src/instaui_tdesign/components/: _base_element.py  _icon_param_utils.py  _utils.py  affix.py  alert.py  anchor.py  auto_complete.py  avatar.py  back_top.py  badge.py  breadcrumb.py  button.py  calendar.py  card.py  cascader.py  checkbox.py  collapse.py  color_picker.py  comment.py  config_provider.py  date_picker.py  descriptions.py  dialog.py  divider.py  drawer.py  dropdown.py  empty.py  form.py  grid.py  (+45 more)
tdesign-dist/: tdesign.min.css  tdesign.min.js
(+25 files in other folders)
