[project]
name = "instaui-tdesign"
version = "0.1.0"
description = "InstaUI TDesign"
keywords = ["ui", "gui", "web", "instaui", "TDesign"]
license = "MIT"
readme = "README.md"
authors = [
    { name = "CrystalWindSnake", email = "568166495@qq.com" }
]
requires-python = ">=3.8,<3.13"

dependencies = [ 
    "instaui",
]


[dependency-groups]
dev = [
    "instaui[all]",
    "playwright==1.47.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-playwright==0.5.2",
]
git = [
    "pre-commit>=3.5.0",
]
lint = [
    "ruff>=0.11.8",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/instaui_tdesign"]

[tool.hatch.build.targets.sdist]
only-include = ["src/instaui_tdesign"]
include = [
    "src/instaui_tdesign/static/**",
]

[tool.hatch.build.force-include]
"src/instaui_tdesign/static" = "src/instaui_tdesign/static"