[project]
name = "instaui-tdesign"
version = "0.5.3"
description = "InstaUI TDesign"
keywords = ["ui", "gui", "web", "instaui", "TDesign"]
license = "MIT"
readme = "README.md"
authors = [
    { name = "CrystalWindSnake", email = "568166495@qq.com" }
]
requires-python = ">=3.9,<3.14"

dependencies = [
    "instaui>=0.7.13",
]

[dependency-groups]
dev = [
    "instaui[web]",
    "pandas>=2.0.3",
    "playwright==1.48.0",
    "polars>=1.34.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-playwright>=0.7.1",
]
git = [
    "pre-commit>=3.5.0",
]
lint = [
    "ruff==0.12.2",
]

[project.optional-dependencies]
web = ["instaui[web]"]
webview = ["instaui[webview]"]
all = ["instaui[all]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/instaui_tdesign"]

[tool.hatch.build.targets.sdist]
only-include = ["src/instaui_tdesign"]
include = [
    "src/instaui_tdesign/static/**",
]

[tool.hatch.build.force-include]
"src/instaui_tdesign/static" = "src/instaui_tdesign/static"

